objects/vlocity_cmt__AsyncProcess__c.object
<CustomObject>
    <description>To track the overall async process details</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Global data used by the custom processes.</description>
        <label>Additonal Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessSteps__c</fullName>
        <description>Async Process details and steps (JSON).</description>
        <label>Async Process Steps</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentStepNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>step number which is about to execute or currently executing of this request.</description>
        <label>Current Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the items to be processed.</description>
        <label>Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>success or failure or any message related to async process request.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceId__c</fullName>
        <description>A salesforce id of any object for which async process request started.</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>status of this async process request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgess</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>InProgress-Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepName__c</fullName>
        <description>Name of the currently executing step of this request.</description>
        <label>Step Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalNumberOfSteps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of steps that need to be executed as part of this request.</description>
        <label>Total Number Of Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Async Process</label>
    <nameField>
        <label>Async Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>